panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__assignment__test_assignment_to_comma_expression.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/assignment/test_assignment_to_comma_expression.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/assignment/test_assignment_to_comma_expression.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` 0)
         (declaration y~3 `int` 0)
         (expression
            (assign
               (comma
                  (name x~2 `int`)
                  (name y~3 `int`))
               42)))))

----- stderr -----
