panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__assignment__test_assignment_to_const.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/assignment/test_assignment_to_const.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/assignment/test_assignment_to_const.c"
   (function-definition
      f~0 `fn() -> int`
      (compound-statement
         (declaration a~2 `int const` 42)
         (expression (assign (name a~2 `int const`) 27))
         (return (name a~2 `int const`))))
   (function-definition
      g~3 `fn() -> int`
      (compound-statement
         (declaration b~5 `ptr<int const>` ∅)
         (declaration c~6 `ptr<int const>` nullptr)
         (expression (assign (name b~5 `ptr<int const>`) (name c~6 `ptr<int const>`)))
         (return 0)))
   (function-definition
      h~7 `fn() -> int`
      (compound-statement
         (declaration d~9 `ptr<int> const` ∅)
         (declaration e~10 `ptr<int>` nullptr)
         (expression (assign (name d~9 `ptr<int> const`) (name e~10 `ptr<int>`)))
         (return 0)))
   (function-definition
      i~11 `fn() -> int`
      (compound-statement
         (declaration f~13 `ptr<int>` ∅)
         (declaration g~14 `ptr<int> const` nullptr)
         (expression (assign (name f~13 `ptr<int>`) (name g~14 `ptr<int> const`)))
         (return 0))))

----- stderr -----
