panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__assignment__test_assignment_to_derefd_void_ptr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/assignment/test_assignment_to_derefd_void_ptr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/assignment/test_assignment_to_derefd_void_ptr.c"
   (function-definition
      f~0 `fn() -> void`
      (compound-statement))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (declaration x~4 `int` 42)
         (declaration p~5 `ptr<void>` (addressof (name x~4 `int`)))
         (expression (assign (deref (name p~5 `ptr<void>`)) (call (name f~0 `fn() -> void`)))))))

----- stderr -----
