panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__assignment__test_assignment_to_non_lvalue.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/assignment/test_assignment_to_non_lvalue.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      f~0 `fn() -> int`
      (compound-statement
         (expression (assign 42 27))
         (return 0))))

----- stderr -----
