panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__assignment__test_assignment_to_parenthesised.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/assignment/test_assignment_to_parenthesised.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/assignment/test_assignment_to_parenthesised.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int const` ∅)
         (declaration y~3 `int const` 27)
         (declaration mutable~4 `int` ∅)
         (expression (assign (assign (name mutable~4 `int`) (assign (name x~2 `int const`) (name y~3 `int const`))) 42))
         (expression (assign (name mutable~4 `int`) 123))
         (expression (assign (name x~2 `int const`) 42))
         (return (name x~2 `int const`)))))

----- stderr -----
